# acapy-vc-holder

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
acapy_vc_holder/: __init__.py  kms.py  provider.py  routes.py
demo/: Dockerfile  demo.py
